# nixb

./: .envrc  Cargo.toml  README.md  clippy.toml  flake.nix  rustfmt.toml
.github/workflows/: ci.yaml
crates/nixb/: Cargo.toml  build.rs
crates/nixb-c-context/: Cargo.toml
crates/nixb-c-context/src/: c_context.rs  lib.rs
crates/nixb-context/: Cargo.toml
crates/nixb-context/src/: context.rs  lib.rs
crates/nixb-contexts/: Cargo.toml
crates/nixb-contexts/src/: c_context.rs  lib.rs
crates/nixb-cpp/: Cargo.toml  build.rs
crates/nixb-cpp/cpp/: function.cpp  store.cpp  wrapper.cpp
crates/nixb-cpp/src/: expr.rs  function.rs  lib.rs  store.rs
crates/nixb-error/: Cargo.toml
crates/nixb-error/src/: error.rs
crates/nixb-expr/: Cargo.toml
crates/nixb-expr/src/: attrset.rs  builtins.rs  callable.rs  context.rs  context2.rs  error.rs  function.rs  lib.rs  list.rs  never.rs  set_pattern.rs  thunk.rs  tuple.rs  value.rs
crates/nixb-macros/: Cargo.toml
crates/nixb-macros/src/: attrset.rs  attrset_derive.rs  entry.rs  lib.rs  list.rs  plugin_entry.rs  primop.rs  set_pattern.rs  try_from_value.rs  value.rs
crates/nixb-plugin/: Cargo.toml
crates/nixb-plugin/src/: context.rs  dlopen.rs  entrypoint.rs  lib.rs  plugin.rs  primop.rs
crates/nixb-result/: Cargo.toml
crates/nixb-result/src/: error.rs  lib.rs
crates/nixb-store/: Cargo.toml
crates/nixb-store/src/: c_store_context.rs  context.rs  get_fs_closure_opts.rs  init.rs  lib.rs  nix_derivation.rs  path_info.rs  store.rs  store_param.rs  store_path.rs
crates/nixb-sys/: Cargo.toml
crates/nixb-sys/src/: lib.rs
crates/nixb-sys/src/bindings/: 2_32.rs  2_33.rs  2_34.rs  2_35.rs  mod.rs
crates/nixb/src/: attrset.rs  builtins.rs  callable.rs  context.rs  dlopen.rs  entry.rs  function.rs  into_result.rs  lib.rs  list.rs  primop.rs  thunk.rs  utf8_cstr.rs  value.rs
examples/: Cargo.toml  build.rs  hello_world.rs  readme.rs
nix/: bindings.nix  check-examples.nix  common.nix  examples.nix  nix-packages.nix  nix-sources.nix  rust.nix  shell.nix  sys-bindings.nix  sys_bindings_generator.rs  update-sys-bindings-generator-lockfile.nix  update-sys-bindings.nix
