[package]
name = "nixb-examples"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["dlopen", "nix-2-34"]
dlopen = ["nixb/dlopen"]
nix-2-32 = ["nixb/nix-2-32"]
nix-2-33 = ["nixb/nix-2-33"]
nix-2-34 = ["nixb/nix-2-34"]

[dependencies]
nixb = { workspace = true, features = ["expr", "plugin"] }

[[example]]
name = "hello_world"
path = "hello_world.rs"
crate-type = ["cdylib"]

[[example]]
name = "readme"
path = "readme.rs"
crate-type = ["cdylib"]

[lints.rust]
refining-impl-trait.level = "allow"
