[package]
name = "nixb-contexts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
c = ["dep:nixb-sys"]
nix-2-33 = ["nixb-sys?/nix-2-33"]
nix-2-34 = ["nix-2-33", "nixb-sys?/nix-2-34"]
nix-2-35 = ["nix-2-34", "nixb-sys?/nix-2-35"]

[dependencies]
nixb-error = { workspace = true }

nixb-sys = { workspace = true, optional = true }

[lints]
workspace = true
