[package]
name = "nixb-expr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
nix-2-33 = ["nixb-cpp/nix-2-33", "nixb-sys/nix-2-33"]
nix-2-34 = ["nix-2-33", "nixb-cpp/nix-2-34", "nixb-sys/nix-2-34"]
nix-2-35 = ["nix-2-34", "nixb-cpp/nix-2-35", "nixb-sys/nix-2-35"]

compact_str = ["dep:compact_str"]
either = ["dep:either"]
smallvec = ["dep:smallvec"]
std = []

[dependencies]
nixb-contexts = { workspace = true }
nixb-cpp = { workspace = true }
nixb-error = { workspace = true }
nixb-macros = { workspace = true }
nixb-sys = { workspace = true }

compact_str = { workspace = true, optional = true }
either = { workspace = true, optional = true }
smallvec = { workspace = true, optional = true, features = ["const_generics"] }

[build-dependencies]
rustc_version = "0.4"

[lints]
workspace = true
