[package]
name = "nixb-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["dlopen"]
dlopen = ["std", "dep:libc", "dep:libloading", "dep:memchr", "dep:rusqlite"]

[dependencies]
nixb-expr = { workspace = true }
nixb-macros = { workspace = true }

libc = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }
memchr = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

[lints]
workspace = true
