[package]
name = "nixb-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
dlopen = ["std", "dep:libc", "dep:libloading", "dep:memchr", "dep:rusqlite"]
nix-2-32 = ["nixb-expr/nix-2-32", "nixb-sys/nix-2-32"]
nix-2-33 = ["nix-2-32", "nixb-expr/nix-2-33", "nixb-sys/nix-2-33"]
nix-2-34 = ["nix-2-33", "nixb-expr/nix-2-34", "nixb-sys/nix-2-34"]
std = []

[dependencies]
nixb-expr = { workspace = true }
nixb-macros = { workspace = true }
nixb-sys = { workspace = true }

libc = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }
memchr = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

[lints]
workspace = true
