[package]
name = "nixb-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
nix-2-32 = ["nixb-sys/nix-2-32"]
nix-2-33 = ["nix-2-32", "nixb-sys/nix-2-33"]
nix-2-34 = ["nix-2-33", "nixb-sys/nix-2-34"]

[dependencies]
nixb-result = { workspace = true }
nixb-sys = { workspace = true }

[lints]
workspace = true
