[package]
name = "nixb-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
nix-2-33 = ["nixb-cpp/nix-2-33", "nixb-sys/nix-2-33"]
nix-2-34 = ["nix-2-33", "nixb-cpp/nix-2-34", "nixb-sys/nix-2-34"]
nix-2-35 = ["nix-2-34", "nixb-cpp/nix-2-35", "nixb-sys/nix-2-35"]

[dependencies]
nixb-contexts = { workspace = true, features = ["c"] }
nixb-cpp = { workspace = true }
nixb-error = { workspace = true }
nixb-sys = { workspace = true }

[lints]
workspace = true
