[package]
name = "nixb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["dlopen", "nix-2-34"]
compact_str = ["nixb-expr?/compact_str"]
dlopen = ["std", "dep:libc", "dep:libloading", "dep:memchr", "dep:rusqlite"]
either = ["nixb-expr?/either"]
expr = ["nixb-expr"]
nix-2-32 = ["nixb-expr?/nix-2-32"]
nix-2-33 = ["nix-2-32", "nixb-expr?/nix-2-33"]
nix-2-34 = ["nix-2-33", "nixb-expr?/nix-2-34"]
smallvec = ["nixb-expr?/smallvec"]
std = ["nixb-expr?/std"]

[dependencies]
libc = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }
memchr = { workspace = true, optional = true }
nixb-expr = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

[lints]
workspace = true
