[package]
name = "nixb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["dlopen", "nix-2-34"]

# Nix versions.
nix-2-32 = ["nixb-expr?/nix-2-32"]
nix-2-33 = ["nix-2-32", "nixb-expr?/nix-2-33"]
nix-2-34 = ["nix-2-33", "nixb-expr?/nix-2-34"]

# Module-enabling features.
expr = ["nixb-expr"]
plugin = ["nixb-plugin"]

# Passthrough features.
compact_str = ["nixb-expr?/compact_str"]
dlopen = ["nixb-plugin?/dlopen"]
either = ["nixb-expr?/either"]
smallvec = ["nixb-expr?/smallvec"]
std = ["nixb-expr?/std"]

[dependencies]
nixb-expr = { workspace = true, optional = true }
nixb-plugin = { workspace = true, optional = true }

[lints]
workspace = true
