[package]
name = "nixb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["dlopen", "context-c", "nix-2-34"]

# Contexts.
context-c = ["nixb-contexts/c"]

# Nix versions.
nix-2-33 = [
  "nixb-contexts/nix-2-33",
  "nixb-expr?/nix-2-33",
  "nixb-plugin?/nix-2-33",
  "nixb-store?/nix-2-33",
]
nix-2-34 = [
  "nix-2-33",
  "nixb-contexts/nix-2-34",
  "nixb-expr?/nix-2-34",
  "nixb-plugin?/nix-2-34",
  "nixb-store?/nix-2-34",
]
nix-2-35 = [
  "nix-2-34",
  "nixb-contexts/nix-2-35",
  "nixb-expr?/nix-2-35",
  "nixb-plugin?/nix-2-35",
  "nixb-store?/nix-2-35",
]

# Module-enabling features.
expr = ["nixb-expr"]
plugin = ["nixb-plugin"]
store = ["nixb-store"]

# Passthrough features.
compact_str = ["nixb-expr?/compact_str"]
dlopen = ["nixb-plugin?/dlopen"]
either = ["nixb-expr?/either"]
smallvec = ["nixb-expr?/smallvec"]
std = ["nixb-expr?/std"]

[dependencies]
nixb-contexts = { workspace = true }
nixb-error = { workspace = true }

nixb-expr = { workspace = true, optional = true }
nixb-plugin = { workspace = true, optional = true }
nixb-store = { workspace = true, optional = true }

[lints]
workspace = true
